--- a/index.html
+++ b/index.html
@@ -21,18 +21,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 
-    <title>Frontend Mentor | Social proof section</title>
+    <title>Social proof section</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
 
@@ -78,7 +68,7 @@
 
     <div class="comment-area">
       <div class="first-comment">
-        <div class="head"> <img src="/images/image-colton.jpg" alt="Colton">
+        <div class="head"> <img src="./images/image-colton.jpg" alt="Colton">
         <div class="break"><h4>Colton Smith</h4>
         <span>Verified Buyer</span></div> </div><br>
         "We needed the same printed design as <br> the one we had ordered a week prior.
@@ -87,7 +77,7 @@
       </div>
 
       <div class="second-comment">
-        <div class="head"> <img src="/images/image-irene.jpg" alt="irene">
+        <div class="head"> <img src="./images/image-irene.jpg" alt="irene">
           <div class="break"><h4>Irene Roberts</h4>
         <span>Verified Buyer</span></div> </div><br>
         "Customer service is always excellent <br> and very quick turn around. Completely <br>
@@ -95,7 +85,7 @@
       </div>
 
       <div class="third-comment">
-        <div class="head"><img src="/images/image-anne.jpg" alt="Anne">
+        <div class="head"><img src="./images/image-anne.jpg" alt="Anne">
           <div class="break"><h4>Anne Wallace</h4>
           <span>Verified Buyer</span></div> </div><br>
         "Put an order with this company and can <br> only praise them for the very high <br>
